--- a/network/acl.html
+++ b/network/acl.html
@@ -86,8 +86,8 @@
                 <h2>Inbound y Outbound</h2>
                 <p>Cuando se aplica una ACL a una interfaz de red, puedes definir si se aplica al tráfico que entra (inbound) o al tráfico que sale (outbound):</p>
                 <ul style="list-style-type: none;">
-                    <li>‣ <marcador class="resaltado5">Inbound (Entrante): </marcador>La ACL se aplica a los paquetes que están llegando a la interfaz. Esto significa que el dispositivo evalúa los paquetes a medida que entran en la red. Por ejemplo, puedes usar una ACL inbound para bloquear ciertos tipos de tráfico antes de que lleguen a una máquina o servicio específico.</li>
-                    <li>‣ <marcador class="resaltado5">Outbound (Saliente): </marcador>La ACL se aplica a los paquetes que están saliendo de la interfaz. Esto significa que el dispositivo evalúa los paquetes a medida que se dirigen fuera de la red. Por ejemplo, puedes usar una ACL outbound para restringir el tráfico que los dispositivos de la red envían hacia Internet.</li>
+                    <li>⋆ <marcador class="resaltado5">Inbound (Entrante): </marcador>La ACL se aplica a los paquetes que están llegando a la interfaz. Esto significa que el dispositivo evalúa los paquetes a medida que entran en la red. Por ejemplo, puedes usar una ACL inbound para bloquear ciertos tipos de tráfico antes de que lleguen a una máquina o servicio específico.</li>
+                    <li>⋆ <marcador class="resaltado5">Outbound (Saliente): </marcador>La ACL se aplica a los paquetes que están saliendo de la interfaz. Esto significa que el dispositivo evalúa los paquetes a medida que se dirigen fuera de la red. Por ejemplo, puedes usar una ACL outbound para restringir el tráfico que los dispositivos de la red envían hacia Internet.</li>
                 </ul>
                 <div class="blog-image">
                     <img src="media/acl3.png" alt="">
