--- a/network/eigrp.html
+++ b/network/eigrp.html
@@ -47,14 +47,14 @@
                 </div>
                 <h2>Características</h2>
                 <ul style="list-style-type: none;">
-                    <li>‣ <marcador class="resaltado5">Híbrido: </marcador>EIGRP se considera un protocolo híbrido, ya que utiliza características tanto de los protocolos de enrutamiento de estado de enlace (como OSPF) como de distancia-vector (como RIP).</li>
-                    <li>‣ <marcador class="resaltado5">Convergencia rápida: </marcador>Una de las principales ventajas de EIGRP es su capacidad de converger rápidamente gracias a su uso del algoritmo DUAL (Diffusing Update Algorithm), que calcula las mejores rutas sin necesidad de actualizar toda la tabla de enrutamiento.</li>
-                    <li>‣ <marcador class="resaltado5">Balanceo de carga desigual: </marcador>EIGRP soporta balanceo de carga tanto igual como desigual, permitiendo a los administradores utilizar rutas con diferentes métricas para balancear el tráfico.</li>
-                    <li>‣ <marcador class="resaltado5">Métrica compuesta: </marcador>EIGRP usa una métrica compuesta basada en cinco parámetros: ancho de banda, retardo, confiabilidad, carga y MTU (tamaño máximo de la unidad de transmisión).</li>
-                    <li>‣ <marcador class="resaltado5">VLSM y CIDR: </marcador>EIGRP soporta el uso de VLSM (Variable Length Subnet Masking) y CIDR (Classless Inter-Domain Routing).</li>
-                    <li>‣ <marcador class="resaltado5">Autenticación: </marcador>EIGRP soporta autenticación MD5 para garantizar que solo routers autorizados participen en el intercambio de rutas.</li>
-                    <li>‣ <marcador class="resaltado5">Actualización parcial: </marcador>A diferencia de RIP, EIGRP envía solo actualizaciones parciales, lo que mejora la eficiencia del ancho de banda.</li>
-                    <li>‣ <marcador class="resaltado5">Sin clase: </marcador>A diferencia de RIP v1, EIGRP es un protocolo sin clase, lo que le permite soportar múltiples subredes y sumarización de rutas.</li>
+                    <li>⋆ <marcador class="resaltado5">Híbrido: </marcador>EIGRP se considera un protocolo híbrido, ya que utiliza características tanto de los protocolos de enrutamiento de estado de enlace (como OSPF) como de distancia-vector (como RIP).</li>
+                    <li>⋆ <marcador class="resaltado5">Convergencia rápida: </marcador>Una de las principales ventajas de EIGRP es su capacidad de converger rápidamente gracias a su uso del algoritmo DUAL (Diffusing Update Algorithm), que calcula las mejores rutas sin necesidad de actualizar toda la tabla de enrutamiento.</li>
+                    <li>⋆ <marcador class="resaltado5">Balanceo de carga desigual: </marcador>EIGRP soporta balanceo de carga tanto igual como desigual, permitiendo a los administradores utilizar rutas con diferentes métricas para balancear el tráfico.</li>
+                    <li>⋆ <marcador class="resaltado5">Métrica compuesta: </marcador>EIGRP usa una métrica compuesta basada en cinco parámetros: ancho de banda, retardo, confiabilidad, carga y MTU (tamaño máximo de la unidad de transmisión).</li>
+                    <li>⋆ <marcador class="resaltado5">VLSM y CIDR: </marcador>EIGRP soporta el uso de VLSM (Variable Length Subnet Masking) y CIDR (Classless Inter-Domain Routing).</li>
+                    <li>⋆ <marcador class="resaltado5">Autenticación: </marcador>EIGRP soporta autenticación MD5 para garantizar que solo routers autorizados participen en el intercambio de rutas.</li>
+                    <li>⋆ <marcador class="resaltado5">Actualización parcial: </marcador>A diferencia de RIP, EIGRP envía solo actualizaciones parciales, lo que mejora la eficiencia del ancho de banda.</li>
+                    <li>⋆ <marcador class="resaltado5">Sin clase: </marcador>A diferencia de RIP v1, EIGRP es un protocolo sin clase, lo que le permite soportar múltiples subredes y sumarización de rutas.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/eigrp8.jpg" alt="">
