--- a/network/nat.html
+++ b/network/nat.html
@@ -92,9 +92,9 @@
                 </div>
                 <h2>Datos Técnicos</h2>
                 <ul style="list-style-type: none;">
-                    <li>‣ <marcador class="resaltado5">Rango de Puertos: </marcador>En una configuración de PAT, se utilizan puertos de 1024 a 65535 para asignar conexiones únicas a dispositivos en la red interna. Esto permite manejar múltiples conexiones simultáneas.</li>
-                    <li>‣ <marcador class="resaltado5">Direcciones IP Privadas: </marcador>Las redes internas suelen utilizar direcciones IP privadas que no se pueden enrutar directamente en Internet, como los rangos 192.168.0.0/16, 10.0.0.0/8 y 172.16.0.0/12.</li>
-                    <li>‣ <marcador class="resaltado5">Tablas de Traducción: </marcador>NAT depende de tablas de traducción que almacenan información sobre cada conexión y mapeo de IP, especialmente en PAT, donde el número de puerto identifica la conexión de origen.</li>
+                    <li>⋆ <marcador class="resaltado5">Rango de Puertos: </marcador>En una configuración de PAT, se utilizan puertos de 1024 a 65535 para asignar conexiones únicas a dispositivos en la red interna. Esto permite manejar múltiples conexiones simultáneas.</li>
+                    <li>⋆ <marcador class="resaltado5">Direcciones IP Privadas: </marcador>Las redes internas suelen utilizar direcciones IP privadas que no se pueden enrutar directamente en Internet, como los rangos 192.168.0.0/16, 10.0.0.0/8 y 172.16.0.0/12.</li>
+                    <li>⋆ <marcador class="resaltado5">Tablas de Traducción: </marcador>NAT depende de tablas de traducción que almacenan información sobre cada conexión y mapeo de IP, especialmente en PAT, donde el número de puerto identifica la conexión de origen.</li>
                 </ul>
                 <h2>¿Cómo verificar tu dirección IP pública?</h2>
                 <p>En <a href="https://www.whatismyip.com/" target="blank">WhatIsMyIP</a>, puedes realizar varias acciones útiles relacionadas con tu conexión a Internet. En primer lugar, el sitio te permite ver claramente tu dirección IP pública, que es esencial para entender cómo te conectas a la red. Esta información se muestra de manera prominente en la parte superior de la página, lo que facilita su localización.</p>
