--- a/network/ppp.html
+++ b/network/ppp.html
@@ -45,14 +45,14 @@
                 <h2>Características</h2>
                 <p>PPP está definido en el RFC 1661 y proporciona diversas características:</p>
                 <ul style="list-style-type: none;">
-                    <li>‣ <marcador class="resaltado5">Encapsulación de Datos: </marcador>PPP encapsula los paquetes de datos en tramas y soporta múltiples protocolos de red como IP y IPX.</li>
-                    <li>‣ <marcador class="resaltado5">Autenticación: </marcador>Autenticación de tres vías más segura, utilizada para verificar de manera continua la identidad de los dispositivos.</li>
+                    <li>⋆ <marcador class="resaltado5">Encapsulación de Datos: </marcador>PPP encapsula los paquetes de datos en tramas y soporta múltiples protocolos de red como IP y IPX.</li>
+                    <li>⋆ <marcador class="resaltado5">Autenticación: </marcador>Autenticación de tres vías más segura, utilizada para verificar de manera continua la identidad de los dispositivos.</li>
                     <ol>
                         <li><marcador class="resaltado8">PAP (Password Authentication Protocol): </marcador>Método simple de autenticación basado en contraseñas.</li>
                         <li><marcador class="resaltado8">CHAP (Challenge Handshake Authentication Protocol): </marcador>Autenticación de tres vías más segura, utilizada para verificar de manera continua la identidad de los dispositivos.</li>
                     </ol>
-                    <li>‣ <marcador class="resaltado5">Detección de Errores: </marcador>Utiliza una secuencia de verificación de tramas (FCS) para identificar errores en los datos.</li>
-                    <li>‣ <marcador class="resaltado5">Multilink PPP (MLPPP): </marcador>Permite la unión de múltiples enlaces físicos en un único enlace lógico, incrementando el ancho de banda disponible.</li>
+                    <li>⋆ <marcador class="resaltado5">Detección de Errores: </marcador>Utiliza una secuencia de verificación de tramas (FCS) para identificar errores en los datos.</li>
+                    <li>⋆ <marcador class="resaltado5">Multilink PPP (MLPPP): </marcador>Permite la unión de múltiples enlaces físicos en un único enlace lógico, incrementando el ancho de banda disponible.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/ppp1.jpg" alt="">
