--- a/network/vlan.html
+++ b/network/vlan.html
@@ -48,9 +48,9 @@
                 </div>
                 <h2>Parámetros Clave</h2>
                 <ul style="list-style-type: none;">
-                    <li><marcador class="resaltado5">ID de VLAN: </marcador>Cada VLAN se identifica mediante un número de identificación único (ID de VLAN) que puede variar de 1 a 4096. Algunos números de VLAN, como la VLAN 1, suelen reservarse para propósitos especiales.</li>
-                    <li><marcador class="resaltado5">Troncales (Trunks): </marcador>Los enlaces de red que transportan el tráfico de múltiples VLANs se llaman troncales. Los troncales utilizan protocolos como IEEE 802.1Q para etiquetar el tráfico de VLAN.</li>
-                    <li><marcador class="resaltado5">Asignación de Puertos: </marcador>Los puertos en un switch se pueden asignar a una o más VLANs. Un puerto puede ser un puerto de acceso, que pertenece a una sola VLAN, o un puerto de troncal, que transporta el tráfico de múltiples VLANs.</li>
+                    <li>⋆ <marcador class="resaltado5">ID de VLAN: </marcador>Cada VLAN se identifica mediante un número de identificación único (ID de VLAN) que puede variar de 1 a 4096. Algunos números de VLAN, como la VLAN 1, suelen reservarse para propósitos especiales.</li>
+                    <li>⋆ <marcador class="resaltado5">Troncales (Trunks): </marcador>Los enlaces de red que transportan el tráfico de múltiples VLANs se llaman troncales. Los troncales utilizan protocolos como IEEE 802.1Q para etiquetar el tráfico de VLAN.</li>
+                    <li>⋆ <marcador class="resaltado5">Asignación de Puertos: </marcador>Los puertos en un switch se pueden asignar a una o más VLANs. Un puerto puede ser un puerto de acceso, que pertenece a una sola VLAN, o un puerto de troncal, que transporta el tráfico de múltiples VLANs.</li>
                 </ul>
                 <h2>Puntos Importantes</h2>
                 <ol>
