--- a/network/vpn.html
+++ b/network/vpn.html
@@ -93,9 +93,9 @@
                 <h2>Métodos de encriptación y autenticación</h2>
                 <p>Existen varias opciones para configurar la autenticación y el cifrado en una VPN, lo que permite adaptar la configuración a las necesidades de seguridad y rendimiento. A continuación, algunos ejemplos comunes:</p>
                 <ul style="list-style-type: none;">
-                    <li>‣ <marcador class="resaltado5">IKE (Internet Key Exchange): </marcador>Protocolo utilizado en IPsec VPNs para la negociación de claves y la autenticación de los dispositivos.</li>
-                    <li>‣ <marcador class="resaltado5">Certificados digitales: </marcador>Una forma muy segura de autenticación que depende de una infraestructura de clave pública (PKI) y proporciona una verificación más robusta que una PSK.</li>
-                    <li>‣ <marcador class="resaltado5">Cifrado simétrico y asimétrico: </marcador>AES, que es un cifrado simétrico, se usa a menudo para el cifrado de los datos en la VPN debido a su eficiencia. Sin embargo, los protocolos como IKE pueden usar cifrado asimétrico (RSA o ECC) para la autenticación inicial, asegurando que solo los dispositivos autorizados puedan establecer la VPN.</li>
+                    <li>⋆ <marcador class="resaltado5">IKE (Internet Key Exchange): </marcador>Protocolo utilizado en IPsec VPNs para la negociación de claves y la autenticación de los dispositivos.</li>
+                    <li>⋆ <marcador class="resaltado5">Certificados digitales: </marcador>Una forma muy segura de autenticación que depende de una infraestructura de clave pública (PKI) y proporciona una verificación más robusta que una PSK.</li>
+                    <li>⋆ <marcador class="resaltado5">Cifrado simétrico y asimétrico: </marcador>AES, que es un cifrado simétrico, se usa a menudo para el cifrado de los datos en la VPN debido a su eficiencia. Sin embargo, los protocolos como IKE pueden usar cifrado asimétrico (RSA o ECC) para la autenticación inicial, asegurando que solo los dispositivos autorizados puedan establecer la VPN.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/vpn4.png" alt="">
