--- a/network/hdlc.html
+++ b/network/hdlc.html
@@ -59,13 +59,13 @@
                 <h2>Características</h2>
                 <p>HDLC se rige por el estándar ISO/IEC 13239. Algunas características técnicas clave de HDLC son:</p>
                 <ul style="list-style-type: none;">
-                    <li>‣ <marcador class="resaltado5">Control de enlace: </marcador>HDLC maneja el control de enlace punto a punto y multipunto.</li>
-                    <li>‣ <marcador class="resaltado5">Modo de Operación: </marcador></li>
+                    <li>⋆ <marcador class="resaltado5">Control de enlace: </marcador>HDLC maneja el control de enlace punto a punto y multipunto.</li>
+                    <li>⋆ <marcador class="resaltado5">Modo de Operación: </marcador></li>
                     <ol>
                         <li><marcador class="resaltado8">Normal Response Mode (NRM): </marcador>Un nodo actúa como principal y otro como secundario, usado en conexiones maestro-esclavo.</li>
                         <li><marcador class="resaltado8">Asynchronous Balanced Mode (ABM): </marcador>Ambos nodos pueden iniciar la transmisión de datos, ideal para redes simétricas.</li>
                     </ol>
-                    <li>‣ <marcador class="resaltado5">Encapsulación: </marcador>Utiliza un formato de encapsulación simple, que hace que el protocolo sea rápido y eficiente.</li>
+                    <li>⋆ <marcador class="resaltado5">Encapsulación: </marcador>Utiliza un formato de encapsulación simple, que hace que el protocolo sea rápido y eficiente.</li>
                 </ul> 
                 <div class="blog-image-grande">
                     <img src="media/hdlc1.png" alt="">
