--- a/hacking/firewall.html
+++ b/hacking/firewall.html
@@ -47,32 +47,32 @@
                 </div>
                 <h2>Alcance del Firewall Fortinet</h2>
                 <ol style="list-style-type: none;">
-                    <li>🖥️ <marcador class="resaltado2">Filtrado de Paquetes: </marcador>Filtrado básico y avanzado de tráfico entrante y saliente basado en IPs, puertos y protocolos.</li>
-                    <li>🖥️ <marcador class="resaltado2">Inspección Profunda de Paquetes (DPI): </marcador>Analiza el contenido de los paquetes de red para detectar y bloquear ataques avanzados que intentan ocultarse como tráfico legítimo.</li>
-                    <li>🖥️ <marcador class="resaltado2">Prevención de Intrusiones (IPS): </marcador>Detecta y previene intentos de explotación de vulnerabilidades en tiempo real, basándose en firmas de ataques conocidas y análisis de comportamiento.</li>
-                    <li>🖥️ <marcador class="resaltado2">Control de Aplicaciones: </marcador>Permite identificar y controlar el tráfico de aplicaciones específicas, como aplicaciones en la nube, redes sociales o aplicaciones P2P.</li>
-                    <li>🖥️ <marcador class="resaltado2">Protección contra Malware: </marcador>Detección y bloqueo de malware antes de que pueda entrar en la red, mediante análisis en tiempo real.</li>
-                    <li>🖥️ <marcador class="resaltado2">VPN (Virtual Private Network): </marcador>Soporte tanto para VPN basadas en IPsec como en SSL, proporcionando conectividad segura y cifrada para usuarios remotos.</li>
-                    <li>🖥️ <marcador class="resaltado2">Firewall de Aplicaciones Web (WAF): </marcador>Protege las aplicaciones web contra ataques comunes como inyecciones SQL, cross-site scripting (XSS) y otras vulnerabilidades de aplicaciones web.</li>
-                    <li>🖥️ <marcador class="resaltado2">DLP (Data Loss Prevention): </marcador>Evita la fuga de datos sensibles mediante la supervisión y control de la transferencia de información crítica.</li>
-                    <li>🖥️ <marcador class="resaltado2">Seguridad en la Nube: </marcador>Integración con plataformas en la nube para asegurar tanto entornos locales como híbridos y multicloud.</li>
-                    <li>🖥️ <marcador class="resaltado2">Gestión Centralizada: </marcador>Con FortiManager, las organizaciones pueden gestionar múltiples dispositivos FortiGate desde un único punto de control.</li>
+                    <li>𖥂 <marcador class="resaltado2">Filtrado de Paquetes: </marcador>Filtrado básico y avanzado de tráfico entrante y saliente basado en IPs, puertos y protocolos.</li>
+                    <li>𖥂 <marcador class="resaltado2">Inspección Profunda de Paquetes (DPI): </marcador>Analiza el contenido de los paquetes de red para detectar y bloquear ataques avanzados que intentan ocultarse como tráfico legítimo.</li>
+                    <li>𖥂 <marcador class="resaltado2">Prevención de Intrusiones (IPS): </marcador>Detecta y previene intentos de explotación de vulnerabilidades en tiempo real, basándose en firmas de ataques conocidas y análisis de comportamiento.</li>
+                    <li>𖥂 <marcador class="resaltado2">Control de Aplicaciones: </marcador>Permite identificar y controlar el tráfico de aplicaciones específicas, como aplicaciones en la nube, redes sociales o aplicaciones P2P.</li>
+                    <li>𖥂 <marcador class="resaltado2">Protección contra Malware: </marcador>Detección y bloqueo de malware antes de que pueda entrar en la red, mediante análisis en tiempo real.</li>
+                    <li>𖥂 <marcador class="resaltado2">VPN (Virtual Private Network): </marcador>Soporte tanto para VPN basadas en IPsec como en SSL, proporcionando conectividad segura y cifrada para usuarios remotos.</li>
+                    <li>𖥂 <marcador class="resaltado2">Firewall de Aplicaciones Web (WAF): </marcador>Protege las aplicaciones web contra ataques comunes como inyecciones SQL, cross-site scripting (XSS) y otras vulnerabilidades de aplicaciones web.</li>
+                    <li>𖥂 <marcador class="resaltado2">DLP (Data Loss Prevention): </marcador>Evita la fuga de datos sensibles mediante la supervisión y control de la transferencia de información crítica.</li>
+                    <li>𖥂 <marcador class="resaltado2">Seguridad en la Nube: </marcador>Integración con plataformas en la nube para asegurar tanto entornos locales como híbridos y multicloud.</li>
+                    <li>𖥂 <marcador class="resaltado2">Gestión Centralizada: </marcador>Con FortiManager, las organizaciones pueden gestionar múltiples dispositivos FortiGate desde un único punto de control.</li>
                 </ol>
                 <h2>Métodos de Conexión y Configuración</h2>
                 <p>Existen varios métodos para conectarse y configurar un firewall Fortinet (FortiGate):</p>
                 <ul style="list-style-type: none;">
-                    <li>💿 <marcador class="resaltado3">Interfaz Web (GUI): </marcador></li>
+                    <li>𖣐 <marcador class="resaltado3">Interfaz Web (GUI): </marcador></li>
                     <p>FortiGate cuenta con una interfaz gráfica de usuario (GUI) accesible a través de un navegador web.</p>
                     <p>Se accede ingresando la dirección IP del firewall en el navegador (generalmente https://192.168.1.99).</p>
                     <p>Desde la GUI, los administradores pueden realizar configuraciones avanzadas sin la necesidad de utilizar la línea de comandos. Es ideal para configuraciones rápidas o para usuarios menos experimentados en CLI.</p>
-                    <li>💿 <marcador class="resaltado3">Línea de Comandos (CLI): </marcador></li>
+                    <li>𖣐 <marcador class="resaltado3">Línea de Comandos (CLI): </marcador></li>
                     <p>El CLI es un método poderoso y eficiente para configurar y gestionar dispositivos FortiGate.</p>
                     <p>Se puede acceder al CLI mediante SSH (consola remota), Telnet o conectando directamente al dispositivo a través de un cable de consola.</p>
                     <p>El CLI permite configuraciones detalladas y automatización mediante scripts. Es el método preferido para usuarios avanzados o administradores que gestionan grandes implementaciones.</p>
-                    <li>💿 <marcador class="resaltado3">FortiManager: </marcador></li>
+                    <li>𖣐 <marcador class="resaltado3">FortiManager: </marcador></li>
                     <p>FortiManager es una plataforma de gestión centralizada que permite configurar y gestionar varios dispositivos FortiGate desde una única consola.</p>
                     <p>Se utiliza en entornos empresariales donde se requiere una gestión de seguridad unificada y coherente en múltiples ubicaciones o redes.</p>
-                    <li>💿 <marcador class="resaltado3">FortiCloud: </marcador></li>
+                    <li>𖣐 <marcador class="resaltado3">FortiCloud: </marcador></li>
                     <p>FortiCloud es el servicio en la nube de Fortinet que permite la gestión y supervisión de dispositivos FortiGate desde cualquier lugar, sin necesidad de infraestructura local adicional.</p>
                 </ul>
                 <div class="blog-image-grande">
