--- a/hacking/deteccion.html
+++ b/hacking/deteccion.html
@@ -52,11 +52,11 @@
                 <h6>Funciones de Snort</h6>
                 <p>Snort ofrece una amplia gama de funciones que lo convierten en una herramienta valiosa para la ciberseguridad. Entre sus características más destacadas se incluyen:</p>
                 <ul style="list-style-type: none;">
-                    <li>🖥️ <marcador class="resaltado2">Detección de Ataques: </marcador>Snort puede identificar varios tipos de ataques, como escaneos de puertos, inyecciones SQL, ataques de denegación de servicio (DoS) y mucho más.</li>
-                    <li>🖥️ <marcador class="resaltado2">Registro de Eventos: </marcador>El sistema genera registros detallados de eventos de seguridad, lo que permite a los administradores llevar un seguimiento de actividades sospechosas y realizar auditorías de seguridad.</li>
-                    <li>🖥️ <marcador class="resaltado2">Prevención de Intrusiones: </marcador>Cuando se utiliza en modo IPS, Snort puede bloquear el tráfico malicioso en tiempo real, proporcionando una capa adicional de defensa para la red.</li>
-                    <li>🖥️ <marcador class="resaltado2">Análisis de Tráfico: </marcador>Snort proporciona capacidades de análisis de tráfico que permiten a los administradores identificar patrones de uso y comportamientos anómalos en la red.</li>
-                    <li>🖥️ <marcador class="resaltado2">Actualizaciones de Reglas: </marcador>La comunidad de Snort y otras fuentes ofrecen actualizaciones frecuentes para las reglas, lo que garantiza que el sistema esté siempre preparado para detectar las amenazas más recientes.</li>
+                    <li>𖥂 <marcador class="resaltado2">Detección de Ataques: </marcador>Snort puede identificar varios tipos de ataques, como escaneos de puertos, inyecciones SQL, ataques de denegación de servicio (DoS) y mucho más.</li>
+                    <li>𖥂 <marcador class="resaltado2">Registro de Eventos: </marcador>El sistema genera registros detallados de eventos de seguridad, lo que permite a los administradores llevar un seguimiento de actividades sospechosas y realizar auditorías de seguridad.</li>
+                    <li>𖥂 <marcador class="resaltado2">Prevención de Intrusiones: </marcador>Cuando se utiliza en modo IPS, Snort puede bloquear el tráfico malicioso en tiempo real, proporcionando una capa adicional de defensa para la red.</li>
+                    <li>𖥂 <marcador class="resaltado2">Análisis de Tráfico: </marcador>Snort proporciona capacidades de análisis de tráfico que permiten a los administradores identificar patrones de uso y comportamientos anómalos en la red.</li>
+                    <li>𖥂 <marcador class="resaltado2">Actualizaciones de Reglas: </marcador>La comunidad de Snort y otras fuentes ofrecen actualizaciones frecuentes para las reglas, lo que garantiza que el sistema esté siempre preparado para detectar las amenazas más recientes.</li>
                 </ul>
                 <h3>Configuración de Snort en Linux</h3>
                 <div class="contenedor">
@@ -113,12 +113,12 @@ drop tcp any any -> 192.168.1.0/24 22 (msg:"Intento SSH bloqueado"; sid:1000002;
                 <p>pfSense es una distribución de software que proporciona servicios de firewall y enrutamiento. Originalmente desarrollado como un proyecto para reemplazar el popular software de firewall m0n0wall, pfSense ha evolucionado significativamente, incorporando muchas características avanzadas. Su interfaz web fácil de usar permite a los usuarios gestionar configuraciones de red, políticas de seguridad y supervisar el tráfico sin la necesidad de conocimientos profundos de programación o administración de sistemas.</p>
                 <h6>Funciones principales de pfSense</h6>
                 <ul style="list-style-type: none;">
-                    <li>🖥️ <marcador class="resaltado2">Firewall: </marcador>pfSense utiliza un firewall de estado, lo que significa que puede rastrear el estado de las conexiones de red y aplicar reglas de seguridad de manera más eficiente.</li>
-                    <li>🖥️ <marcador class="resaltado2">NAT: </marcador>Facilita la conexión de múltiples dispositivos a Internet mediante una única dirección IP pública, lo que mejora la privacidad y seguridad.</li>
-                    <li>🖥️ <marcador class="resaltado2">VPN: </marcador>Permite crear conexiones seguras entre redes y usuarios remotos. pfSense soporta varios protocolos VPN, incluyendo OpenVPN, IPsec y L2TP.</li>
-                    <li>🖥️ <marcador class="resaltado2">QoS: </marcador>Permite priorizar el tráfico de red, asegurando que aplicaciones críticas reciban el ancho de banda necesario para funcionar sin problemas.</li>
-                    <li>🖥️ <marcador class="resaltado2">DHCP y DNS: </marcador>pfSense puede actuar como servidor DHCP y DNS, asignando direcciones IP a dispositivos en la red y resolviendo nombres de dominio.</li>
-                    <li>🖥️ <marcador class="resaltado2">Logs y monitoreo: </marcador>Proporciona herramientas integradas para supervisar el tráfico de la red y registrar eventos de seguridad, lo que es esencial para la detección de intrusiones y la auditoría.</li>
+                    <li>𖥂 <marcador class="resaltado2">Firewall: </marcador>pfSense utiliza un firewall de estado, lo que significa que puede rastrear el estado de las conexiones de red y aplicar reglas de seguridad de manera más eficiente.</li>
+                    <li>𖥂 <marcador class="resaltado2">NAT: </marcador>Facilita la conexión de múltiples dispositivos a Internet mediante una única dirección IP pública, lo que mejora la privacidad y seguridad.</li>
+                    <li>𖥂 <marcador class="resaltado2">VPN: </marcador>Permite crear conexiones seguras entre redes y usuarios remotos. pfSense soporta varios protocolos VPN, incluyendo OpenVPN, IPsec y L2TP.</li>
+                    <li>𖥂 <marcador class="resaltado2">QoS: </marcador>Permite priorizar el tráfico de red, asegurando que aplicaciones críticas reciban el ancho de banda necesario para funcionar sin problemas.</li>
+                    <li>𖥂 <marcador class="resaltado2">DHCP y DNS: </marcador>pfSense puede actuar como servidor DHCP y DNS, asignando direcciones IP a dispositivos en la red y resolviendo nombres de dominio.</li>
+                    <li>𖥂 <marcador class="resaltado2">Logs y monitoreo: </marcador>Proporciona herramientas integradas para supervisar el tráfico de la red y registrar eventos de seguridad, lo que es esencial para la detección de intrusiones y la auditoría.</li>
                 </ul>
                 <h6>Configuraciones de pfSense</h6>
                 <p>Configurar pfSense puede parecer intimidante al principio, pero su interfaz intuitiva simplifica el proceso. La configuración inicial generalmente implica:</p>
@@ -181,15 +181,15 @@ drop tcp any any -> 192.168.1.0/24 22 (msg:"Intento SSH bloqueado"; sid:1000002;
                 <p>En el ámbito de la seguridad informática, dos herramientas fundamentales que ayudan a proteger sistemas y redes son iptables y Windows Defender. Mientras que iptables es un software de firewall utilizado principalmente en sistemas Linux, Windows Defender es el antivirus y firewall integrado en los sistemas operativos Windows. Ambas herramientas desempeñan un papel crucial en la defensa contra amenazas cibernéticas, aunque sus enfoques y configuraciones son diferentes.</p>
                 <p>iptables es un firewall basado en tablas que permite a los administradores de sistemas controlar el tráfico de red en sistemas Linux. Utiliza reglas definidas por el usuario para permitir, denegar o modificar paquetes de datos que pasan a través del sistema. Algunas de las funciones clave de iptables incluyen:</p>
                 <ul style="list-style-type: none;">
-                    <li>🖥️ <marcador class="resaltado2">Filtrado de paquetes: </marcador>Decide si un paquete de datos debe ser aceptado o rechazado.</li>
-                    <li>🖥️ <marcador class="resaltado2">Registro: </marcador>Permite registrar paquetes específicos para auditorías y análisis.</li>
-                    <li>🖥️ <marcador class="resaltado2">NAT (Network Address Translation): </marcador>Permite modificar las direcciones IP de los paquetes de datos para permitir la comunicación entre redes.</li>
+                    <li>𖥂 <marcador class="resaltado2">Filtrado de paquetes: </marcador>Decide si un paquete de datos debe ser aceptado o rechazado.</li>
+                    <li>𖥂 <marcador class="resaltado2">Registro: </marcador>Permite registrar paquetes específicos para auditorías y análisis.</li>
+                    <li>𖥂 <marcador class="resaltado2">NAT (Network Address Translation): </marcador>Permite modificar las direcciones IP de los paquetes de datos para permitir la comunicación entre redes.</li>
                 </ul>
                 <p>Por otro lado, Windows Defender no solo actúa como un firewall, sino que también proporciona protección antivirus y antimalware. Sus funciones incluyen:</p>
                 <ul style="list-style-type: none;">
-                    <li>🖥️ <marcador class="resaltado2">Protección en tiempo real: </marcador>Monitorea continuamente el sistema para detectar y bloquear amenazas.</li>
-                    <li>🖥️ <marcador class="resaltado2">Análisis de archivos y programas: </marcador>Escanea archivos y aplicaciones en busca de comportamientos maliciosos.</li>
-                    <li>🖥️ <marcador class="resaltado2">Configuración del firewall: </marcador>Permite controlar las conexiones entrantes y salientes para proteger el sistema de accesos no autorizados.</li>
+                    <li>𖥂 <marcador class="resaltado2">Protección en tiempo real: </marcador>Monitorea continuamente el sistema para detectar y bloquear amenazas.</li>
+                    <li>𖥂 <marcador class="resaltado2">Análisis de archivos y programas: </marcador>Escanea archivos y aplicaciones en busca de comportamientos maliciosos.</li>
+                    <li>𖥂 <marcador class="resaltado2">Configuración del firewall: </marcador>Permite controlar las conexiones entrantes y salientes para proteger el sistema de accesos no autorizados.</li>
                 </ul>
                 <h6>Configuración de iptables</h6>
                 <p>Para comenzar a utilizar iptables, debes tener privilegios de administrador en un sistema Linux. La configuración básica de iptables implica definir reglas en diferentes cadenas (INPUT, OUTPUT, FORWARD) que controlan el tráfico de red.</p>
