--- a/network/acl.html
+++ b/network/acl.html
@@ -172,7 +172,7 @@ deny ip any any</code></pre>
                     </ul>
                 </ol>
                 <p>Esta ACL permite el tráfico TCP en el puerto 80 (HTTP) desde cualquier origen hacia cualquier destino, y luego deniega cualquier otro tráfico.</p>
-                <h6>¿Cuál elegir?</h6>
+                <h66>¿Cuál elegir?</h6>
                 <ul>
                     <li>Usa ACL estándar cuando solo necesitas controlar el acceso basándote en la IP de origen.</li>
                     <li>Usa ACL extendida cuando necesites un control más granular sobre el tráfico, filtrando por IP de origen y destino, protocolo, y puerto.</li>
@@ -270,7 +270,7 @@ rule 10 deny ip</code></pre>
                     <p>La ACL número 5001 permite el tráfico TCP entre la red de origen 192.168.20.0/24 y la red de destino 172.16.30.0/24 específicamente desde el puerto 8080 de origen hacia el puerto 443 de destino.</p>
                     <p>La segunda regla (rule 10 deny ip) deniega cualquier otro tráfico que no coincida con la primera regla.</p>
                 </ol>
-                <h6>¿Cuál Elegir?</h6>
+                <h66>¿Cuál Elegir?</h6>
                 <ul>
                     <li>Usa la ACL Básica cuando necesites un control sencillo, filtrando solo por dirección IP de origen. Esto es útil en casos donde solo quieres restringir o permitir acceso desde ciertas IPs sin especificar protocolos ni puertos.</li>
                     <li>Usa las ACL avanzadas cuando necesites un filtrado detallado que incluya IP de origen y destino, protocolos específicos (TCP, UDP, ICMP), y puertos. Es ideal para situaciones donde debes controlar qué servicios específicos (como HTTP, FTP, Telnet) pueden ser accesibles desde una red.</li>
@@ -321,32 +321,32 @@ rule 10 deny ip</code></pre>
                     <img src="media/acl1.png" alt="">
                 </div>
                 <p>Subred:</p>
-                <ul style="list-style-type: none;">
-                    <li>⫸ <marcador class="resaltado8">Subred de la empresa: </marcador>192.168.1.0/24</li>
-                    <li>⫸ <marcador class="resaltado8">Subred HR: </marcador>172.17.0.0/20</li>
+                <ul>
+                    <li><marcador class="resaltado8">Subred de la empresa: </marcador>192.168.1.0/24</li>
+                    <li><marcador class="resaltado8">Subred HR: </marcador>172.17.0.0/20</li>
                 </ul>
-                <ol>
-                    <li>En R1:</li>
+                <ul style="list-style-type: none;">
+                    <li>⫸ En R1:</li>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">Interfaz hacia R2: </marcador>192.168.1.1</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia S1: </marcador>192.168.2.1</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia S2: </marcador>192.168.3.1</li>
                     </ul>
-                    <li>En R2:</li>
+                    <li>⫸ En R2:</li>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">Interfaz hacia R1: </marcador>192.168.1.2</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia Internet: </marcador>192.168.4.1</li>
                     </ul>
-                    <li>En R3:</li>
+                    <li>⫸ En R3:</li>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">Interfaz hacia R2: </marcador>192.168.1.3</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia subred HR:  </marcador>172.17.0.1</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia S3: </marcador>192.168.5.1</li>
                     </ul>
-                </ol>
+                </ul>
                 <p>Cada ACL deberá aplicarse en la interfaz correcta y en la dirección adecuada (entrante o saliente) para cumplir con los requisitos de seguridad.</p>
                 <h3>Cisco</h3>
-                <h6>Router 1</h6>
+                <h66>Router 1</h7>
                 <ul style="list-style-type: none;">
                     <li>∘ <marcador class="resaltado8">Interfaz hacia R2: </marcador>192.168.1.1</li>
                     <li>∘ <marcador class="resaltado8">Interfaz hacia S1: </marcador>192.168.2.1</li>
@@ -406,7 +406,7 @@ interface GigabitEthernet0/1
                     </div>
                     <p>Se asume que S1 tiene la IP 192.168.2.2 y S2 la IP 192.168.3.2.</p>
                 </ol>
-                    <h6>Router 2</h6>
+                    <h66>Router 2</h7>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">Interfaz hacia R1: </marcador>192.168.1.2</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia Internet: </marcador>192.168.4.1</li>
@@ -445,7 +445,7 @@ interface GigabitEthernet0/1
                     </div>
                     <p>Los puertos 25 (SMTP), 110 (POP3) y 143 (IMAP) permiten el tráfico de correo entrante, mientras que el puerto 23 (Telnet) es denegado.</p>
                 </ol>
-                <h6>Router 3</h6>
+                <h66>Router 3</h7>
                 <ul style="list-style-type: none;">
                     <li>∘ <marcador class="resaltado8">Interfaz hacia R2: </marcador>192.168.1.3</li>
                     <li>∘ <marcador class="resaltado8">Interfaz hacia subred HR:  </marcador>172.17.0.1</li>
@@ -508,7 +508,7 @@ interface GigabitEthernet0/2
                 </div>
                 <p>Esto deniega el tráfico web HTTP (puerto 80), HTTPS (puerto 443) y FTP (puerto 21) para S3.</p>
                 </ol>
-                <h6>Comandos adicionales de verificación</h6>
+                <h66>Comandos adicionales de verificación</h7>
                 <p>Puedes verificar que las ACL se estén aplicando correctamente con estos comandos:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
@@ -528,30 +528,30 @@ show ip interface GigabitEthernet0/2</code></pre>
                 </div>
                 <h3>Huawei</h3>
                 <p>Subred:</p>
-                <ul style="list-style-type: none;">
-                    <li>⫸ <marcador class="resaltado8">Subred de la empresa: </marcador>192.168.1.0/24</li>
-                    <li>⫸ <marcador class="resaltado8">Subred HR: </marcador>172.17.0.0/20</li>
+                <ul>
+                    <li><marcador class="resaltado8">Subred de la empresa: </marcador>192.168.1.0/24</li>
+                    <li><marcador class="resaltado8">Subred HR: </marcador>172.17.0.0/20</li>
                 </ul>
-                <ol>
-                    <li>En R1:</li>
+                <ul style="list-style-type: none;">
+                    <li>⫸ En R1:</li>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">Interfaz hacia R2: </marcador>192.168.1.1</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia S1: </marcador>192.168.2.1</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia S2: </marcador>192.168.3.1</li>
                     </ul>
-                    <li>En R2:</li>
+                    <li>⫸ En R2:</li>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">Interfaz hacia R1: </marcador>192.168.1.2</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia Internet: </marcador>192.168.4.1</li>
                     </ul>
-                    <li>En R3:</li>
+                    <li>⫸ En R3:</li>
                     <ul style="list-style-type: none;">
                         <li>∘ <marcador class="resaltado8">Interfaz hacia R2: </marcador>192.168.1.3</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia subred HR:  </marcador>172.17.0.1</li>
                         <li>∘ <marcador class="resaltado8">Interfaz hacia S3: </marcador>192.168.5.1</li>
                     </ul>
-                </ol>
-                <h6>Router 1</h6>
+                </ul>
+                <h66>Router 1</h66>
                 <ul style="list-style-type: none;">
                     <li>∘ <marcador class="resaltado8">Interfaz hacia R2: </marcador>192.168.1.1</li>
                     <li>∘ <marcador class="resaltado8">Interfaz hacia S1: </marcador>192.168.2.1</li>
@@ -614,7 +614,7 @@ interface GigabitEthernet0/0/1
                     </div>
                     <p>Se asume que S1 tiene la IP 192.168.1.1 y S2 la IP 192.168.1.2.</p>
                 </ol>
-                <h6>Router 2</h6>
+                <h66>Router 2</h7>
                 <ul style="list-style-type: none;">
                     <li>∘ <marcador class="resaltado8">Interfaz hacia R1: </marcador>192.168.1.2</li>
                     <li>∘ <marcador class="resaltado8">Interfaz hacia Internet: </marcador>192.168.4.1</li>
@@ -654,7 +654,7 @@ interface GigabitEthernet0/0/1
                     </div>
                     <p>Los puertos 25 (SMTP), 110 (POP3) y 143 (IMAP) permiten el tráfico de correo entrante, mientras que el puerto 23 (Telnet) es denegado.</p>
                 </ol>
-                <h6>Router 3</h6>
+                <h66>Router 3</h7>
                 <ul style="list-style-type: none;">
                     <li>∘ <marcador class="resaltado8">Interfaz hacia R2: </marcador>192.168.1.3</li>
                     <li>∘ <marcador class="resaltado8">Interfaz hacia subred HR:  </marcador>172.17.0.1</li>
@@ -694,9 +694,7 @@ interface GigabitEthernet0/0/1
     packet-filter 3004 outbound</code></pre>
                     </div>
                 </div>
-                <p></p>
                 <li><marcador class="resaltado8">Denegar actualizaciones, FTP y acceso a la web en la interfaz conectada a S3:</marcador></li>
-                <p></p>
                 <div class="consola">
                     <div class="barra-superior-consola">
                         <div class="grupo-icono-texto">
@@ -719,7 +717,7 @@ interface GigabitEthernet0/0/2
                 </div>
                 <p>Esto deniega el tráfico web HTTP (puerto 80), HTTPS (puerto 443) y FTP (puerto 21) para S3.</p>
             </ol>
-            <h6>Comandos adicionales de verificación</h6>
+            <h66>Comandos adicionales de verificación</h7>
             <p>Puedes verificar que las ACL se estén aplicando correctamente con estos comandos:</p>
             <div class="consola">
                 <div class="barra-superior-consola">
