--- a/hacking/firewall.html
+++ b/hacking/firewall.html
@@ -61,18 +61,18 @@
                 <h2>Métodos de Conexión y Configuración</h2>
                 <p>Existen varios métodos para conectarse y configurar un firewall Fortinet (FortiGate):</p>
                 <ul style="list-style-type: none;">
-                    <li>𖣐 <marcador class="resaltado3">Interfaz Web (GUI): </marcador></li>
+                    <li>𖥑 <marcador class="resaltado3">Interfaz Web (GUI): </marcador></li>
                     <p>FortiGate cuenta con una interfaz gráfica de usuario (GUI) accesible a través de un navegador web.</p>
                     <p>Se accede ingresando la dirección IP del firewall en el navegador (generalmente https://192.168.1.99).</p>
                     <p>Desde la GUI, los administradores pueden realizar configuraciones avanzadas sin la necesidad de utilizar la línea de comandos. Es ideal para configuraciones rápidas o para usuarios menos experimentados en CLI.</p>
-                    <li>𖣐 <marcador class="resaltado3">Línea de Comandos (CLI): </marcador></li>
+                    <li>𖥑 <marcador class="resaltado3">Línea de Comandos (CLI): </marcador></li>
                     <p>El CLI es un método poderoso y eficiente para configurar y gestionar dispositivos FortiGate.</p>
                     <p>Se puede acceder al CLI mediante SSH (consola remota), Telnet o conectando directamente al dispositivo a través de un cable de consola.</p>
                     <p>El CLI permite configuraciones detalladas y automatización mediante scripts. Es el método preferido para usuarios avanzados o administradores que gestionan grandes implementaciones.</p>
-                    <li>𖣐 <marcador class="resaltado3">FortiManager: </marcador></li>
+                    <li>𖥑 <marcador class="resaltado3">FortiManager: </marcador></li>
                     <p>FortiManager es una plataforma de gestión centralizada que permite configurar y gestionar varios dispositivos FortiGate desde una única consola.</p>
                     <p>Se utiliza en entornos empresariales donde se requiere una gestión de seguridad unificada y coherente en múltiples ubicaciones o redes.</p>
-                    <li>𖣐 <marcador class="resaltado3">FortiCloud: </marcador></li>
+                    <li>𖥑 <marcador class="resaltado3">FortiCloud: </marcador></li>
                     <p>FortiCloud es el servicio en la nube de Fortinet que permite la gestión y supervisión de dispositivos FortiGate desde cualquier lugar, sin necesidad de infraestructura local adicional.</p>
                 </ul>
                 <div class="blog-image-grande">
